# skill-tree

./: Cargo.toml  README.md
.github/workflows/: test.yml
ci/: build-book.sh
md/: summary.md  welcome.md
md/design/: 01-config.md  02-github-client.md  config.md
mdbook-skill-tree/: Cargo.toml
mdbook-skill-tree/src/: main.rs  preprocessor.rs
skill-tree-testlib/: Cargo.toml
skill-tree-testlib/src/: assertion.rs  fixtures.rs  github.rs  lib.rs
src/: config.rs  error.rs  graphviz.rs  lib.rs  main.rs  tree.rs
src/cli/: mod.rs  render.rs  unblocked.rs  validate.rs
src/error/: config.rs  github.rs
src/github/: issues.rs  mod.rs  projects.rs
src/graph/: layout.rs  mod.rs  validate.rs
src/render/: mod.rs
tests/: github_client.rs
