[package]
name = "skill-tree"
version = "3.2.1"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2024"
description = "generate graphviz files to show roadmaps"
license = "MIT"
repository = "https://github.com/nikomatsakis/skill-tree"
homepage = "https://github.com/nikomatsakis/skill-tree"

[workspace]
members = ["mdbook-skill-tree"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
htmlescape = "0.3.1"

[dev-dependencies]
regex = "1.0"
prettydiff = "0.4"

[profile.release.build-override]
opt-level = 0
