[package]
name = "skill-tree"
version = "3.2.1"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2024"
description = "generate graphviz files to show roadmaps"
license = "MIT"
repository = "https://github.com/nikomatsakis/skill-tree"
homepage = "https://github.com/nikomatsakis/skill-tree"


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"


[workspace]
members = ["./", "./skill-tree-testlib"]

[dev-dependencies]
indoc = "2.0.7"
tempfile = "3.27.0"
