[package]
name = "mdbook-skill-tree"
version = "3.0.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2024"
description = "mdbook plugin to show roadmaps"
license = "MIT"
repository = "https://github.com/nikomatsakis/skill-tree"
homepage = "https://github.com/nikomatsakis/skill-tree"

[dependencies]
anyhow = "1.0"
skill-tree = { version = "3.0.0", path = ".." }
mdbook = "0.4"
pulldown-cmark = "0.10"
pulldown-cmark-to-cmark = "13"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.22"
html-escape = "0.2.13"

[dev-dependencies]
regex = "1.0"
